--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,19 +1,30 @@
 html, body {
   height: 100%;
 }
-body {
-  margin: 0 100px;
+
+#app {
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
+
 .content {
+  margin: 0 200px;
   flex: 1 0 auto;
+  
+  .content-header {
+    background-color: #f2dede;
+    margin-bottom: 50px;
+    padding: 5px;
+    text-align: center;
+  }
 }
 .footer {
+  height: 50px;
+  padding: 10px;
   flex-shrink: 0;
-  clear: both;
-  margin-bottom: 50px;
   text-align: center;
+  background-color: #d9edf7;
   
   img {
     width: 40px;
@@ -35,13 +46,17 @@ body {
 }
 
 .flex-space {
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 .block {
   width: 500px;
 }
 
-h1 {
-  text-align: center;
+.episodes-container {
+  margin-top: 50px;
+}
+
+.heading {
+  font-weight: 700;
 }
