--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -13,7 +13,7 @@ html, body {
   flex: 1 0 auto;
   
   .content-header {
-    background-color: #f2dede;
+    background-color: #f5e8e882;
     margin-bottom: 50px;
     padding: 5px;
     text-align: center;
